// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Launcher component when agents are available renders 1`] = `
<div
  className="Launcher"
>
  <ChatContainer
    hidden={true}
    initialized={false}
    toggleChat={[Function]}
  />
  <ToggleChatButton
    chatOpen={false}
    toggleChat={[Function]}
  />
</div>
`;

exports[`Launcher component when agents are not available when agents are not available when there is a conversation already in progress after the chat has been closed leaves the chat closed 1`] = `
<div
  className="Launcher"
>
  <ChatContainer
    hidden={true}
    initialized={true}
    toggleChat={[Function]}
  />
  <ToggleChatButton
    chatOpen={false}
    toggleChat={[Function]}
  />
</div>
`;

exports[`Launcher component when agents are not available when agents are not available when there is a conversation already in progress renders the chat 1`] = `
<div
  className="Launcher"
>
  <ChatContainer
    hidden={true}
    initialized={true}
    toggleChat={[Function]}
  />
  <ToggleChatButton
    chatOpen={false}
    toggleChat={[Function]}
  />
</div>
`;

exports[`Launcher component when agents are not available when there is not a conversation already in progress hides the launcher 1`] = `null`;
